--- a/ganja.html
+++ b/ganja.html
@@ -168,7 +168,7 @@ nav {
       <div class="flex flex-col items-center cursor-pointer group">
         <div class="relative mb-2">
           <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white/20 group-hover:border-white/40 transition-all duration-300">
-            <img src="https://github.com/ero1337x/luvsx/blob/main/yuno.png?raw=true" alt="Yuno's Profile" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
+            <img src="https://github.com/ero1337x/luvsx/blob/main/yuno.png?raw=true" alt="Yuno" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
           </div>
           <div class="absolute -bottom-1 -right-1 w-5 h-5 bg-red-500 rounded-full border-2 border-black flex items-center justify-center">
             <div class="bg-red-500 w-2 h-2 rounded-full"></div>
@@ -182,7 +182,7 @@ nav {
       <div class="flex flex-col items-center cursor-pointer group">
         <div class="relative mb-2">
           <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white/20 group-hover:border-white/40 transition-all duration-300">
-            <img src="https://github.com/ero1337x/luvsx/blob/main/cent.png?raw=true" alt="Cent's Profile" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" onerror="this.src='https://via.placeholder.com/60'" />
+            <img src="https://github.com/ero1337x/luvsx/blob/main/cent.png?raw=true" alt="Cent" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" onerror="this.src='https://via.placeholder.com/60'" />
           </div>
           <div class="absolute -bottom-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-black flex items-center justify-center">
             <div class="bg-green-500 w-2 h-2 rounded-full"></div>
@@ -196,7 +196,7 @@ nav {
       <div class="flex flex-col items-center cursor-pointer group">
         <div class="relative mb-2">
           <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white/20 group-hover:border-white/40 transition-all duration-300">
-            <img src="https://github.com/ero1337x/luvsx/blob/main/sabon.jpg?raw=true" alt="$abon's Profile" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
+            <img src="https://github.com/ero1337x/luvsx/blob/main/sabon.jpg?raw=true" alt="$abon" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
           </div>
           <div class="absolute -bottom-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-black flex items-center justify-center">
             <div class="bg-green-500 w-2 h-2 rounded-full"></div>
@@ -210,7 +210,7 @@ nav {
       <div class="flex flex-col items-center cursor-pointer group">
         <div class="relative mb-2">
           <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white/20 group-hover:border-white/40 transition-all duration-300">
-            <img src="https://github.com/ero1337x/luvsx/blob/main/jared.jpg?raw=true" alt="Jared's Profile" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
+            <img src="https://github.com/ero1337x/luvsx/blob/main/jared.jpg?raw=true" alt="Jared" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
           </div>
           <div class="absolute -bottom-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-black flex items-center justify-center">
             <div class="bg-green-500 w-2 h-2 rounded-full"></div>
@@ -224,7 +224,7 @@ nav {
       <div class="flex flex-col items-center cursor-pointer group">
         <div class="relative mb-2">
           <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white/20 group-hover:border-white/40 transition-all duration-300">
-            <img src="https://github.com/ero1337x/luvsx/blob/main/jared.jpg?raw=true" alt="Jared's Profile" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
+            <img src="https://github.com/" alt="Gabo" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
           </div>
           <div class="absolute -bottom-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-black flex items-center justify-center">
             <div class="bg-green-500 w-2 h-2 rounded-full"></div>
