--- a/ganja.html
+++ b/ganja.html
@@ -5,6 +5,8 @@
   <link rel="icon" href="https://github.com/ero1337x/luvsx/blob/main/nigga.png?raw=true" type="image/png" />
 
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <style>
 
 @keyframes pulse {
@@ -121,7 +123,6 @@ nav {
     <li><a href="#Main" class="hover:underline">Main</a></li>
     <li><a href="#Admins" class="hover:underline">Admins</a></li>
     <li><a href="#BG" class="hover:underline">BG</a></li>
-    <li><a href="#us" class="hover:underline">Server</a></li>
   </ul>
 </nav>
 
@@ -154,9 +155,10 @@ nav {
       </div>
       <div class="flex items-center justify-center space-x-2">
         <div class="w-1 h-1 bg-green-500 rounded-full animate-ping"></div>
-        <p class="text-sm text-white/70 select-none"><span id="viewer-count">0</span> viewers</p>
+        <p class="text-sm text-white/70 select-none"><span id="viewer-count">0</span> viewers (Under Dev)</p>
       </div>
     </div>
+    
 
   </section>
 
@@ -168,7 +170,7 @@ nav {
       <div class="flex flex-col items-center cursor-pointer group">
         <div class="relative mb-2">
           <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white/20 group-hover:border-white/40 transition-all duration-300">
-            <img src="https://github.com/ero1337x/luvsx/blob/main/yuno.png?raw=true" alt="Yuno" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
+            <img src="https://github.com/ero1337x/luvsx/blob/main/yuno.png?raw=true" alt="Yuno's Profile" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
           </div>
           <div class="absolute -bottom-1 -right-1 w-5 h-5 bg-red-500 rounded-full border-2 border-black flex items-center justify-center">
             <div class="bg-red-500 w-2 h-2 rounded-full"></div>
@@ -182,7 +184,7 @@ nav {
       <div class="flex flex-col items-center cursor-pointer group">
         <div class="relative mb-2">
           <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white/20 group-hover:border-white/40 transition-all duration-300">
-            <img src="https://github.com/ero1337x/luvsx/blob/main/cent.png?raw=true" alt="Cent" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" onerror="this.src='https://via.placeholder.com/60'" />
+            <img src="https://github.com/ero1337x/luvsx/blob/main/cent.png?raw=true" alt="Cent's Profile" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" onerror="this.src='https://via.placeholder.com/60'" />
           </div>
           <div class="absolute -bottom-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-black flex items-center justify-center">
             <div class="bg-green-500 w-2 h-2 rounded-full"></div>
@@ -196,7 +198,7 @@ nav {
       <div class="flex flex-col items-center cursor-pointer group">
         <div class="relative mb-2">
           <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white/20 group-hover:border-white/40 transition-all duration-300">
-            <img src="https://github.com/ero1337x/luvsx/blob/main/sabon.jpg?raw=true" alt="$abon" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
+            <img src="https://github.com/ero1337x/luvsx/blob/main/sabon.jpg?raw=true" alt="$abon's Profile" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
           </div>
           <div class="absolute -bottom-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-black flex items-center justify-center">
             <div class="bg-green-500 w-2 h-2 rounded-full"></div>
@@ -210,7 +212,7 @@ nav {
       <div class="flex flex-col items-center cursor-pointer group">
         <div class="relative mb-2">
           <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white/20 group-hover:border-white/40 transition-all duration-300">
-            <img src="https://github.com/ero1337x/luvsx/blob/main/jared.jpg?raw=true" alt="Jared" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
+            <img src="https://github.com/ero1337x/luvsx/blob/main/jared.jpg?raw=true" alt="Jared's Profile" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-300" />
           </div>
           <div class="absolute -bottom-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-black flex items-center justify-center">
             <div class="bg-green-500 w-2 h-2 rounded-full"></div>
@@ -243,20 +245,40 @@ nav {
       <p class="text-white/60 text-lg select-none">
         Affiliated :
       </p>
-      <img src="https://github.com/ero1337x/luvsx/blob/main/nigga.png?raw=true" alt="revshit" class="w-48 h-48 object-cover rounded-lg border border-white/20" />
+      <img src="https://github.com/ero1337x/luvsx/blob/main/revsht.png?raw=true" alt="revshit" class="w-48 h-48 object-cover rounded-lg border border-white/20" />
     </div>
     <div class="grid grid-cols-2 md:grid-cols-4 gap-6 max-w-2xl">
     </div>
-
-  <div class="user-columns">
-    <div class="user-tag">xo.revshit</div>
-    <div class="user-tag">xtazy #revshit</div>
-    <div class="user-tag">topthree #revshit</div>
-    <div class="user-tag">revgng #revshit</div>
-    <div class="user-tag">nexu #revshit</div>
-    <div class="user-tag">purpz #revshit</div>
-  </div>
+<div class="mt-6 flex flex-col items-center space-y-4">
+      <p class="text-white/60 text-lg select-none">
+        s/o all revshit affiliated servers!
+<div class="flex flex-wrap gap-2 justify-center text-sm text-white/70">
+  <button class="bg-black/60 border border-white/10 px-3 py-1 rounded flex items-center space-x-2">
+    <img src="https://github.com/ero1337x/luvsx/blob/main/REV-512x512.png?raw=true" class="w-4 h-4" alt="icon">
+    <span>xo.revshit</span>
+  </button>
+  <button class="bg-black/60 border border-white/10 px-3 py-1 rounded flex items-center space-x-2">
+    <img src="https://github.com/ero1337x/luvsx/blob/main/XTAS.png?raw=true" class="w-4 h-4" alt="icon">
+    <span>xtazy #revshit</span>
+  </button>
+  <button class="bg-black/60 border border-white/10 px-3 py-1 rounded flex items-center space-x-2">
+    <img src="https://github.com/ero1337x/luvsx/blob/main/top3.jpg?raw=true" class="w-4 h-4" alt="icon">
+    <span>topthree #revshit</span>
+  </button>
+  <button class="bg-black/60 border border-white/10 px-3 py-1 rounded flex items-center space-x-2">
+    <img src="https://github.com/ero1337x/luvsx/blob/main/revgng.png?raw=true" class="w-4 h-4" alt="icon">
+    <span>revgng #revshit</span>
+  </button>
+  <button class="bg-black/60 border border-white/10 px-3 py-1 rounded flex items-center space-x-2">
+    <img src="https://github.com/ero1337x/luvsx/blob/main/Nexu_2.png?raw=true" class="w-4 h-4" alt="icon">
+    <span>nexu #revshit</span>
+  </button>
+  <button class="bg-black/60 border border-white/10 px-3 py-1 rounded flex items-center space-x-2">
+    <img src="https://github.com/ero1337x/luvsx/blob/main/purp.jpg?raw=true" class="w-4 h-4" alt="icon">
+    <span>purpz #revshit</span>
+  </button>
 </div>
+
 
   <section id="BG" class="section">
     <div class="w-full max-w-md bg-black/60 backdrop-blur-lg rounded-xl p-6 flex flex-col items-center space-y-4">
@@ -282,10 +304,7 @@ nav {
     </div>
   </section>
 
-  <section id="us" class="section /90 text-center">
-    <p class="text-lg text-white/60">join us - </p>
-    <a href="https://discord.gg/gnja" class="text-white hover:underline text-xl">discord.gg/gnja</a>
-  </section>
+
   <script>
     const audio = document.getElementById('bg-audio');
     const btn = document.getElementById('play-btn');
@@ -324,5 +343,9 @@ nav {
       return `${m}:${s}`;
     }
   </script>
+
+  <p class="text-white/60 text-lg select-none">
+        @revshit | jxred </3
+      </p>
 </body>
 </html>
